added base styles

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,16 @@
 <header>
-  <h1>HEADER</h1>
-  <img src="../img/apple_cran.jpg" alt="">
+  <section>
+    <div class="container">
+      <h1>HEADER</h1>
+      <img src="../img/apple_cran.jpg" alt="" />
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere,
+        quibusdam?
+      </p>
+      <h2>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facere,
+        quibusdam?
+      </h2>
+    </div>
+  </section>
 </header>
