--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,3 +1,15 @@
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3;
+
+  color: black;
+  letter-spacing: -0.02em;
+
+  margin: 0;
+}
 
 h1,
 h2,
@@ -8,7 +20,6 @@ h6,
 p {
   margin: 0;
 }
-
 
 ul {
   margin: 0;
