--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,22 @@
-<section>
-  <h1>
-    Treat yourself or a loved one to our finest ingredients for a moment of pure
-    delight!
-  </h1>
+<section class="hero-section">
+  <div class="container hero-container">
+    <h1 class="hero-title">
+      Treat yourself or a loved one to our finest ingredients for a moment of
+      pure delight!
+    </h1>
 
-  <ul>
-    <li><button type="button">Buy now</button></li>
-    <li><button type="button">How it’s made</button></li>
-    <li><button type="button">scroll down</button></li>
-  </ul>
+    <ul>
+      <li>
+        <button type="button" class="hero-button сolored">Buy now</button>
+      </li>
+      <li>
+        <button type="button" class="hero-button transparent">
+          How it’s made
+        </button>
+      </li>
+      <li>
+        <button type="button" class="hero-button scroll">scroll down</button>
+      </li>
+    </ul>
+  </div>
 </section>
