--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -6,6 +6,7 @@ body {
   line-height: 1.3;
 
   color: black;
+  background-color: #E2E2E2;
   letter-spacing: -0.02em;
 
   margin: 0;
@@ -40,4 +41,5 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  border-radius: 15px;
 }
