--- a/src/css/base.css
+++ b/src/css/base.css
@@ -22,11 +22,25 @@
   overflow: hidden;
 }
 
+section {
+  padding-top: 72px;
+}
+
 .container {
   width: 100%;
 
   margin: 0 auto;
   padding: 0 15px;
+}
+
+h2 {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--color-black);
 }
 
 @media screen and (min-width: 375px) {
@@ -36,12 +50,24 @@
 }
 
 @media screen and (min-width: 768px) {
+  section {
+    padding-top: 100px;
+  }
+
   .container {
     max-width: 734px;
+  }
+
+  h2 {
+    font-size: 24px;
   }
 }
 
 @media screen and (min-width: 1200px) {
+  section {
+    padding-top: 128px;
+  }
+
   .container {
     max-width: 1166px;
   }
