hero-css-mobile

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,11 @@
 <section class="hero-section">
-  <div class="container hero-container">
+  <div class="hero-container">
     <h1 class="hero-title">
       Treat yourself or a loved one to our finest ingredients for a moment of
       pure delight!
     </h1>
 
-    <ul>
+    <ul class="hero-button-list">
       <li>
         <button type="button" class="hero-button сolored">Buy now</button>
       </li>
