--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -30,25 +30,25 @@
       <nav class="header-nav-soc">
         <a href="">
           <svg class="nav-soc-icon">
-            <use href="../img/icons.svg#icon-instagram"></use>
+            <use href="/img/icons.svg#icon-instagram"></use>
           </svg>
         </a>
         <a href="">
           <svg class="nav-soc-icon">
-            <use href="../img/icons.svg#icon-twitter"></use>
+            <use href="/img/icons.svg#icon-twitter"></use>
           </svg>
         </a>
       </nav>
 
       <svg onclick="openNav()" class="open-menu-icon">
-        <use href="../img/icons.svg#icon-menu"></use>
+        <use href="/img/icons.svg#icon-menu"></use>
       </svg>
     </nav>
   </div>
 
   <nav id="sidebar" class="sidebar">
     <svg onclick="closeNav()" class="close-menu-icon">
-      <use href="../img/icons.svg#icon-close"></use>
+      <use href="/img/icons.svg#icon-close"></use>
     </svg>
     <div class="sidebar-container">
       <ul class="mobile-menu-list">
@@ -75,10 +75,10 @@
 
       <div>
         <svg class="mobile-menu-soc-icon">
-          <use href="../img/icons.svg#icon-instagram"></use>
+          <use href="/img/icons.svg#icon-instagram"></use>
         </svg>
         <svg class="mobile-menu-soc-icon">
-          <use href="../img/icons.svg#icon-twitter"></use>
+          <use href="/img/icons.svg#icon-twitter"></use>
         </svg>
       </div>
     </div>
