--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,9 +4,9 @@
       <a href="" class="logo"
         >SIMPLY CHOCOLATE
         <svg onclick="openNav()" class="logo-icon">
-          <use href="../img/icons.svg#icon-chocolate-logo"></use></svg
-      ></a>
-
+          <use href="/img/icons.svg#icon-chocolate-logo"></use></svg>
+      </a>
+      
       <ul class="nav-list">
         <li class="nav-list-item">
           <a class="nav-list-link" href="../index.html">Home</a>
