--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -3,8 +3,8 @@
     <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how_its_made">
       <img
-        srcset="../img/made_mobile@2x.jpg"
-        src="../img/made_mobile@2x.jpg 2x"
+        srcset="/img/made_mobile@2x.jpg"
+        src="/img/made_mobile@2x.jpg 2x"
         alt="how_its_made"
         width="335"
         border-radius="15"
