--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -2,6 +2,8 @@
   padding: 0px 20px 72px 20px;
 }
 
+/* фото бекграунд додам після цієї перевірки */
+
 .hero-container {
   width: 100%;
   max-width: 335px;
@@ -20,7 +22,7 @@
   background-position: center;
   background-size: cover;
   border-radius: 30px;
-  background-color: blue;
+  background-color: var(--color-orange);
 }
 
 .hero-title {
@@ -30,11 +32,17 @@
   line-height: 1.2;
   margin-bottom: 32px;
 }
+.hero-button-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 14px;
+}
+
 .hero-button {
   border-radius: 100px;
 
   padding: 12px 28px;
-  display: inline-block;
+
   cursor: pointer;
 
   color: var(--color-white);
@@ -54,10 +62,6 @@
   background-color: transparent;
   border: 1px solid #ffffff;
 }
-.hero-button.scroll {
-  background-color: transparent;
-  border: none;
-}
 
 .hero-button.сolored:hover,
 .hero-button.сolored:focus {
@@ -69,12 +73,41 @@
   border: 1px solid var(--color-orange);
   color: var(--color-orange);
 }
+
+.hero-button.scroll {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin-top: 32px;
+}
+
+.elips-btn-hero {
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height: 28px;
+  width: 28px;
+  background-color: var(--color-white);
+  border-radius: 50%;
+  color: var(--color-orange);
+  transition: background-color var(--time-duration) var(--time-distribution),
+    color var(--time-duration) var(--time-distribution);
+}
+
+.icon-btn-hero {
+  fill: currentColor;
+}
+
 .hero-button.scroll:hover,
 .hero-button.scroll:focus {
   color: var(--color-orange);
 }
-.hero-button-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 14px;
+
+.hero-button.scroll:hover .elips-btn-hero,
+.hero-button.scroll:focus .elips-btn-hero {
+  background-color: var(--color-orange);
+  color: var(--color-white);
 }
