--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -5,18 +5,21 @@
       pure delight!
     </h1>
 
-    <ul class="hero-button-list">
-      <li>
-        <button type="button" class="hero-button сolored">Buy now</button>
-      </li>
-      <li>
-        <button type="button" class="hero-button transparent">
-          How it’s made
-        </button>
-      </li>
-      <li>
-        <button type="button" class="hero-button scroll">scroll down</button>
-      </li>
-    </ul>
+    <div class="hero-button-list">
+      <button type="button" class="hero-button сolored">Buy now</button>
+
+      <button type="button" class="hero-button transparent" id="how-its-made">
+        How it’s made
+      </button>
+    </div>
+
+    <button type="button" class="hero-button scroll">
+      scroll down
+      <div class="elips-btn-hero">
+        <svg class="icon-btn-hero" width="16" height="16">
+          <use href="./img/icons.svg#icon-vector"></use>
+        </svg>
+      </div>
+    </button>
   </div>
 </section>
