removed the point

--- a/src/partials/our_products.html
+++ b/src/partials/our_products.html
@@ -3,8 +3,8 @@
   <ul>
     <li>
       <img
-        srcset="../img/orange.png 1x, ../img/orange@2x.png 2x"
-        src="../img/orange.png"
+        srcset="/img/orange.png 1x, /img/orange@2x.png 2x"
+        src="/img/orange.png"
         alt="Orange chocolate"
         width="230"
       />
@@ -14,8 +14,8 @@
     </li>
     <li>
       <img
-        srcset="../img/apple_cran.png 1x, ../img/apple_cran@2x.png 2x"
-        src="../img/apple_cran.png"
+        srcset="/img/apple_cran.png 1x, /img/apple_cran@2x.png 2x"
+        src="/img/apple_cran.png"
         alt="Apple&cranberry chocolate"
         width="230"
       />
@@ -25,8 +25,8 @@
     </li>
     <li>
       <img
-        srcset="../img/lime_salt.png 1x, ../img/lime_salt@2x.png 2x"
-        src="../img/lime_salt.png"
+        srcset="/img/lime_salt.png 1x, /img/lime_salt@2x.png 2x"
+        src="/img/lime_salt.png"
         alt="Lime&sea salt chocolate"
         width="230"
       />
@@ -36,8 +36,8 @@
     </li>
     <li>
       <img
-        srcset="../img/pineapple.png 1x, ../img/pineapple@2x.png 2x"
-        src="../img/pineapple.png"
+        srcset="/img/pineapple.png 1x, /img/pineapple@2x.png 2x"
+        src="/img/pineapple.png"
         alt="Pineapple chocolate"
         width="230"
       />
@@ -47,8 +47,8 @@
     </li>
     <li>
       <img
-        srcset="../img/classic_milk.png 1x, ../img/classic_milk@2x.png 2x"
-        src="../img/classic_milk.png"
+        srcset="/img/classic_milk.png 1x, /img/classic_milk@2x.png 2x"
+        src="/img/classic_milk.png"
         alt="Classic milk chocolate"
         width="230"
       />
@@ -58,8 +58,8 @@
     </li>
     <li>
       <img
-        srcset="../img/honey.png 1x, ../img/honey@2x.png 2x"
-        src="../img/honey.png"
+        srcset="/img/honey.png 1x, /img/honey@2x.png 2x"
+        src="/img/honey.png"
         alt="Honey chocolate"
         width="230"
       />
@@ -69,8 +69,8 @@
     </li>
     <li>
       <img
-        srcset="../img/roasted_fruits.png 1x, ../img/roasted_fruits@2x.png 2x"
-        src="../img/roasted_fruits.png"
+        srcset="/img/roasted_fruits.png 1x, /img/roasted_fruits@2x.png 2x"
+        src="/img/roasted_fruits.png"
         alt="Roasted fruits chocolate"
         width="230"
       />
@@ -80,8 +80,8 @@
     </li>
     <li>
       <img
-        srcset="../img/classic_white.png 1x, ../img/classic_white@2x.png 2x"
-        src="../img/classic_white.png"
+        srcset="/img/classic_white.png 1x, /img/classic_white@2x.png 2x"
+        src="/img/classic_white.png"
         alt="Classic white chocolate"
         width="230"
       />
