--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -1,31 +1,38 @@
-<a href="">
-    <span>Top</span>
-    "Sellers"
-</a>
-<div>
-    <ul>
+<section>
+    <div class="container">
+        <h2 class="title">Top
+    <span class="title-logo">Sellers</span>
+</h2>
+<div class="top-sellers">
+    <ul class="blocks-imag">
 <li>
     <img 
-    srcset="../img/buy_choco_nuts_desktop.jpg 1x, ../img/buy_choco_nuts_desktop@2x.jpg 2x"
-    src="../img/buy_choco_nuts_desktop.jpg" 
+    class="img-chocolate"
+    srcset="../img/buy_choco_nuts_mobile.jpg 1x, ../img/buy_choco_nuts_mobile@2x.jpg 2x"
+    src="../img/buy_choco_nuts_mobile.jpg" 
     alt="coffee" 
     width="368px">
 </li>
 <li>
     <img
-    srcset="../img/buy_choco_marm_desktop.jpg 1x, ../img/buy_choco_marm_desktop@2x.jpg 2x" 
-    src="../img/buy_choco_marm_desktop.jpg" 
+    class="img-chocolate"
+    srcset="../img/buy_choco_marm_mobile.jpg 1x, ../img/buy_choco_marm_mobile@2x.jpg 2x" 
+    src="../img/buy_choco_marm_mobile.jpg" 
     alt="nuts" 
     width="368px">
 </li>
+<p class="text-about-chocolate">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
 <li>
     <img 
+    class="img-chocolate"
     srcset="../img/buy_choco_desktop.jpg 1x, ../img/buy_choco_desktop@2x.jpg 2x"
     src="../img/buy_choco_desktop.jpg" 
     alt="chocolate" 
     width="368px">
 </li>
 </ul>
-<p>Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-<button type="buttom">Buy now</button>
+
+<button class="btn-buy-now" type="buttom">Buy now</button>
 </div>
+</div>
+</section>
