--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,9 +4,10 @@
       <a href="" class="logo"
         >SIMPLY CHOCOLATE
         <svg onclick="openNav()" class="logo-icon">
-          <use href="/img/icons.svg#icon-chocolate-logo"></use></svg>
+          <use href="/img/icons.svg#icon-chocolate-logo"></use>
+        </svg>
       </a>
-      
+
       <ul class="nav-list">
         <li class="nav-list-item">
           <a class="nav-list-link" href="../index.html">Home</a>
@@ -27,18 +28,22 @@
         </li>
       </ul>
 
-      <nav class="header-nav-soc">
-        <a href="">
-          <svg class="nav-soc-icon">
-            <use href="/img/icons.svg#icon-instagram"></use>
-          </svg>
-        </a>
-        <a href="">
-          <svg class="nav-soc-icon">
-            <use href="/img/icons.svg#icon-twitter"></use>
-          </svg>
-        </a>
-      </nav>
+      <ul class="header-nav-soc">
+        <li>
+          <a href="https://www.instagram.com/" target="_blank">
+            <svg class="nav-soc-icon">
+              <use href="/img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li>
+          <a href="https://twitter.com/?lang=en" target="_blank">
+            <svg class="nav-soc-icon">
+              <use href="/img/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
 
       <svg onclick="openNav()" class="open-menu-icon">
         <use href="/img/icons.svg#icon-menu"></use>
