--- a/src/css/how_its_made.css
+++ b/src/css/how_its_made.css
@@ -20,7 +20,32 @@
 }
 
 .list-made {
+  position: relative;
+}
 
+.main-image-made {
+  position: relative;
+}
+
+.play {
+  position: absolute;
+  background-image: url(../img/play.svg);
+  width: 35px;
+  height: 35px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%);
+}
+
+.custom-inside {
+  width: 8px;
+  height: 8px;
+
+  position: absolute;
+  background-image: url(../img/custom-inside.svg);
+
+  left: 0;
+  margin-top: 5px;
 }
 
 .subtitle {
@@ -34,11 +59,11 @@
 .list-made .item {
   line-height: 1.29;
   letter-spacing: -0.02em;
-  padding-left: 30px;
+  padding-left: 16px;
   margin-bottom: 18px;
 }
 
-.list-made .item:last-child{
+.list-made .item:last-child {
   margin-bottom: 0;
 }
 
