--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -2,32 +2,40 @@
   <div class="container">
     <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how-its-made">
-      <img
-        srcset="../img/made_mobile@2x.jpg"
-        src="../img/made_mobile@2x.jpg 2x"
-        alt="how_its_made"
-        width="335"
-      />
+      <div class="main-image-made">
+        <img
+          srcset="/img/made_mobile@2x.jpg 2x" 
+          src="/img/made_mobile.jpg"
+          alt="how_its_made"
+          width="335"
+        />
+        <span class="play"></span>
+      </div>
       <div class="text-made">
         <h2 class="subtitle">
           Try our chocolates today and discover the perfect balance of flavor
         </h2>
         <ul class="list-made">
           <li class="item">
+            <span class="custom-inside"></span>
             Heat the milk in a saucepan without bringing it to a boil. Add sugar
             and cocoa powder.
           </li>
           <li class="item">
+            <span class="custom-inside"></span>
             At the same time, prepare a water bath. Melt the butter on it.
           </li>
           <li class="item">
+            <span class="custom-inside"></span>
             "Mix" the milk mixture and already liquid butter. Mix thoroughly
             with a silicone spatula so that the mass becomes uniform and silky.
           </li>
           <li class="item">
+            <span class="custom-inside"></span>
             Heat the mixture over low heat, letting it barely boil.
           </li>
           <li class="item">
+            <span class="custom-inside"></span>
             Pour the chocolate into special containers (can be replaced with ice
             molds). Allow to cool and harden.
           </li>
