header-mobile-menu-fix-soc-links

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -78,14 +78,22 @@
         </li>
       </ul>
 
-      <div>
-        <svg class="mobile-menu-soc-icon">
-          <use href="/img/icons.svg#icon-instagram"></use>
-        </svg>
-        <svg class="mobile-menu-soc-icon">
-          <use href="/img/icons.svg#icon-twitter"></use>
-        </svg>
-      </div>
+      <ul class="mobile-menu-soc-list">
+        <li class="mobile-menu-soc-list-item">
+          <a href="https://www.instagram.com/" target="_blank">
+            <svg class="mobile-menu-soc-icon">
+              <use href="/img/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-menu-soc-list-item">
+          <a href="https://twitter.com/?lang=en" target="_blank">
+            <svg class="mobile-menu-soc-icon">
+              <use href="/img/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </nav>
 </header>
