--- a/src/css/header.css
+++ b/src/css/header.css
@@ -109,22 +109,28 @@
   color: var(--color-orange);
 }
 
-.mobile-menu-soc-icon {
+.mobile-menu-soc-list {
+  display: flex;
+  gap: 18px;
+  align-items: center;
+}
+
+.mobile-menu-soc-list-item {
   width: 22px;
   height: 22px;
+}
+
+.mobile-menu-soc-icon {
+  width: 100%;
+  height: 100%;
 
   stroke: var(--color-white);
-  cursor: pointer;
 
   transition: var(--time-duration) var(--time-distribution);
 }
 
 .mobile-menu-soc-icon:is(:hover, :focus) {
   stroke: var(--color-orange);
-}
-
-.mobile-menu-soc-icon:nth-child(1) {
-  margin-right: 18px;
 }
 
 /* *----------------------MEDIA-------------------------------- */
@@ -143,7 +149,7 @@
     height: 32px;
   }
 
-  .mobile-menu-soc-icon {
+  .mobile-menu-soc-list-item {
     width: 24px;
     height: 24px;
   }
