--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,5 +1,6 @@
 @import url('./reset.css');
 @import url('./base.css');
+@import url('./swiper.css');
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./advantages.css');
