--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -8,16 +8,16 @@
 <li>
     <img 
     class="img-chocolate"
-    srcset="/src/img/buy_choco_nuts_mobile.jpg 1x, /src/img/buy_choco_nuts_mobile@2x.jpg 2x"
-    src="/src/img/buy_choco_nuts_mobile.jpg" 
+    srcset="/img/buy_choco_nuts_mobile.jpg 1x, /img/buy_choco_nuts_mobile@2x.jpg 2x"
+    src="/img/buy_choco_nuts_mobile.jpg" 
     alt="coffee" 
     width="368px">
 </li>
 <li>
     <img
     class="img-chocolate"
-    srcset="/src/img/buy_choco_marm_mobile.jpg 1x, /src/img/buy_choco_marm_mobile@2x.jpg 2x" 
-    src="/src/img/buy_choco_marm_mobile.jpg" 
+    srcset="/img/buy_choco_marm_mobile.jpg 1x, /img/buy_choco_marm_mobile@2x.jpg 2x" 
+    src="/img/buy_choco_marm_mobile.jpg" 
     alt="nuts" 
     width="368px">
 </li>
@@ -25,8 +25,8 @@
 <li>
     <img 
     class="img-chocolate"
-    srcset="/src/img/buy_choco_desktop.jpg 1x, /src/img/img/buy_choco_desktop@2x.jpg 2x"
-    src="/src/img/img/buy_choco_desktop.jpg" 
+    srcset="/img/buy_choco_desktop.jpg 1x, /img/img/buy_choco_desktop@2x.jpg 2x"
+    src="/img/img/buy_choco_desktop.jpg" 
     alt="chocolate" 
     width="368px">
 </li>
