--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -25,8 +25,8 @@
 <li>
     <img 
     class="img-chocolate"
-    srcset="/img/buy_choco_desktop.jpg 1x, /img/img/buy_choco_desktop@2x.jpg 2x"
-    src="/img/img/buy_choco_desktop.jpg" 
+    srcset="/img/buy_choco_desktop.jpg 1x, /img/buy_choco_desktop@2x.jpg 2x"
+    src="/img/buy_choco_desktop.jpg" 
     alt="chocolate" 
     width="368px">
 </li>
