--- a/src/css/top_sellers.css
+++ b/src/css/top_sellers.css
@@ -9,6 +9,9 @@ text-transform: uppercase;
 margin-bottom: 50px;
 color: var(--color-orange);
 }
+.title-logo {
+color: var(--color-black);
+}
 .container {
     width: 100%;
     padding-left: 20px;
@@ -47,4 +50,26 @@ color: var(--color-orange);
     letter-spacing: 0.02em;
     color: var(--color-black);
     text-align: left;
+}
+.btn-buy-now {
+    color: var(--color-white);
+    background-color: var(--color-orange);
+    border: none;
+    border-radius: 100px;
+    font-weight: 600;
+    font-size: 14px;
+    width: 120px;
+    height: 41px;
+    /* padding: 12px 28px; */
+    display: flex;
+    align-items: center;
+    flex-direction: center;
+    padding: 10px 25px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+.btn-buy-now:hover,
+.btn-buy-now:focus {
+    color: var(--color-orange);
+    background-color: rgba(252, 241, 224, 1);
 }
