--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -3,7 +3,7 @@
     <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how-its-made">
       <div class="main-image-made">
-        <img
+        <img class="image"
           srcset="/img/made_mobile@2x.jpg 2x" 
           src="/img/made_mobile.jpg"
           alt="how_its_made"
