--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,16 +45,20 @@
         </li>
       </ul>
 
-      <svg onclick="openNav()" class="open-menu-icon">
-        <use href="/img/icons.svg#icon-menu"></use>
-      </svg>
+      <button class="btn-open-menu">
+        <svg class="open-menu-icon">
+          <use href="/img/icons.svg#icon-menu"></use>
+        </svg>
+      </button>
     </nav>
   </div>
 
   <nav id="sidebar" class="sidebar">
-    <svg onclick="closeNav()" class="close-menu-icon">
-      <use href="/img/icons.svg#icon-close"></use>
-    </svg>
+    <button class="btn-close-menu">
+      <svg class="close-menu-icon">
+        <use href="/img/icons.svg#icon-close"></use>
+      </svg>
+    </button>
     <div class="sidebar-container">
       <ul class="mobile-menu-list">
         <li class="mobile-menu-list-item">
@@ -97,19 +101,3 @@
     </div>
   </nav>
 </header>
-
-<script>
-  if (window.innerWidth >= 768) {
-    function openNav() {
-      document.getElementById('sidebar').style.width = '290px';
-    }
-  } else {
-    function openNav() {
-      document.getElementById('sidebar').style.width = '250px';
-    }
-  }
-
-  function closeNav() {
-    document.getElementById('sidebar').style.width = '0';
-  }
-</script>
