--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -14,9 +14,9 @@
     </div>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button class="modal-close" type="button" data-modal-close>
+            <button class="modal-close" data-modal-close type="button" >
                 <svg class="close-icon">
-                    <use href="/img/icons.svg#icon-close-black-18dp-2-1"></use>
+                    <use href="/img/icons.svg#icon-close" ></use>
     
                 </svg>
     
