--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -126,6 +126,7 @@ color: var(--color-white);
     width: 100%;
     height: 100%;
     padding: 20px 0;
+    align-items: flex-end;
     
 
 }
@@ -166,12 +167,12 @@ color: var(--color-white);
         top: 24px;
         right: 24px;
         background: transparent;
+        border: 4px solid #FFFFFF;
         border: none;
         width: 24px;
         height: 24px;
         cursor: pointer;
-    
-        z-index: 2;
+        z-index: 20;
 }
 
 
@@ -187,12 +188,15 @@ color: var(--color-white);
 }
 
 .close-icon {
+    display: flex;
+    position: relative;
     display: block;
     width: 14px;
     height: 14px;
     fill: white;
+    stroke: white;
     margin: 0 auto;
-    z-index: 100;
+    /*z-index: 100;*/
 }
 
 
@@ -213,10 +217,11 @@ color: var(--color-white);
     font-weight: 600;
     font-size: 24px;
     line-height: 1.166;
-    z-index: 200;
+    z-index: 50;
     letter-spacing: -0.03em;
     text-transform: uppercase;
     color: #111111;
+    margin-bottom: 40px;
 }
 
 .title-color-second {
@@ -243,9 +248,8 @@ color: var(--color-white);
 
 
 #user_email {
-    width: 313px;
+        width: 313px;
         height: 52px;
-    
         padding: 16px 24px 16px 24px;
         font-weight: 400;
         font-size: 18px;
@@ -266,7 +270,6 @@ color: var(--color-white);
 
 }
 
-
 .btn-form-send {
     display: flex;
     align-items: center;
@@ -279,7 +282,6 @@ color: var(--color-white);
     color: #FFFFFF;
     padding: 17px 40px;
     gap: 14px;
-    
     width: 137px;
     height: 52px;
     border: none;
