--- a/src/css/how_its_made.css
+++ b/src/css/how_its_made.css
@@ -9,6 +9,13 @@
   margin-bottom: 50px;
 }
 
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 24px;
+    line-height: 1.17;
+  }
+}
+
 .title-slogan {
   color: var(--color-orange);
 }
@@ -27,9 +34,17 @@
   position: relative;
 }
 
-.image{
+.image {
   border-radius: 15px;
+  height: 500px;
 }
+
+@media screen and (min-width: 768px) {
+  .image {
+    height: 400px;
+  }
+}
+
 
 .play {
   position: absolute;
@@ -77,4 +92,10 @@
   border-radius: 15px;
   padding: 20px 14px;
   margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .text-made {
+   width: 614px;
+  }
 }
