--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,6 +3,7 @@
   --color-dark-purple: rgba(30, 24, 35, 1);
   --color-orange: rgba(253, 146, 34, 1);
   --color-white: rgba(255, 255, 255, 1);
+  --color-light-orange: rgba(252, 241, 224, 1);
 
   --time-distribution: cubic-bezier(0.4, 0, 0.2, 1);
   --time-duration: 250ms;
