--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -4,10 +4,10 @@
     <div class="how-its-made">
       <div class="main-image-made">
         <img class="image"
-          srcset="/img/made_mobile.jpg 335w, /img/made_tablet@2x.jpg 614w, /img/made_desktop@2x.jpg 600w" 
-          src="/img/made_mobile@2x.jpg"
+          srcset="/img/made_mobile.jpg 335w, /img/made_tablet.jpg 614w, /img/made_desktop.jpg 600w," 
+          src="/img/made_mobile.jpg"
           alt="how_its_made"
-          sizes="(max-width: 767px)335px, (min-width: 768px) 614px, (min-width: 1200px) 600px,"
+          sizes="(min-width: 1200px) 600px, (min-width: 768px) 614px, (max-width: 767px) 335px"
         />
         <span class="play"></span>
       </div>
