--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -16,7 +16,7 @@
 
 <li>
     <img
-    class="img-chocolate"
+    class="img-chocolate second"
     srcset="/img/buy_choco_marm_mobile.jpg 1x, /img/buy_choco_marm_mobile@2x.jpg 2x" 
     src="/img/buy_choco_marm_mobile.jpg" 
     alt="nuts" 
