--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -3,12 +3,21 @@
     <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how-its-made">
       <div class="main-image-made">
-        <img class="image"
-          srcset="/img/made_mobile.jpg 335w, /img/made_tablet.jpg 614w, /img/made_desktop.jpg 600w," 
-          src="/img/made_mobile.jpg"
-          alt="how_its_made"
-          sizes="(min-width: 1200px) 600px, (min-width: 768px) 614px, (max-width: 767px) 335px"
-        />
+        <picture>
+          <source
+            srcset="../img/made_desktop.jpg, ../img/made_desktop@2x.jpg 2x"
+            media="(min-width: 1200px)"
+          />
+          <source
+            srcset="../img/made_tablet.jpg, ../img/made_tablet@2x.jpg 2x"
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="../img/made_mobile.jpg, ../img/made_mobile@2x.jpg 2x"
+            media="(max-width: 767px)"
+          />
+          <img src="../img/made_mobile.jpg" alt="how_its_made" />
+        </picture>
         <span class="play"></span>
       </div>
       <div class="text-made">
