--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,28 +1,95 @@
 .hero-section {
   padding: 0px 20px 72px 20px;
 }
+@media screen and (min-width: 768px) {
+  .hero-section {
+    padding: 0px 32px 50px 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-section {
+    padding: 0px 32px 72px 32px;
+  }
+}
 
 /* фото бекграунд додам після цієї перевірки */
 
 .hero-container {
   width: 100%;
   max-width: 335px;
-  padding-left: 20px;
-  padding-right: 20px;
+
   margin-left: auto;
   margin-right: auto;
 
-  padding-top: 396px;
-
-  padding-bottom: 20px;
+  padding: 396px 20px 20px 20px;
 
   background-image: linear-gradient(rgba(17, 17, 17, 0), rgba(17, 17, 17, 0.4)),
-    url(../images/);
+    url(/img/hero_mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 30px;
   background-color: var(--color-orange);
+}
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero-container {
+    background-image: linear-gradient(
+        rgba(17, 17, 17, 0),
+        rgba(17, 17, 17, 0.4)
+      ),
+      url(/img/hero_mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    max-width: 704px;
+
+    padding: 671px 40px 40px 40px;
+    background-image: linear-gradient(
+        rgba(17, 17, 17, 0),
+        rgba(17, 17, 17, 0.4)
+      ),
+      url(/img/hero_tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 768px) and (min-resolution: 192dpi),
+  screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero-container {
+    background-image: linear-gradient(
+        rgba(17, 17, 17, 0),
+        rgba(17, 17, 17, 0.4)
+      ),
+      url(/img/hero_tablet@2x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    max-width: 1136px;
+
+    padding: 681px 40px 40px 40px;
+    background-image: linear-gradient(
+        rgba(17, 17, 17, 0),
+        rgba(17, 17, 17, 0.4)
+      ),
+      url(/img/hero_desktop.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2),
+  screen and (min-width: 1200px) and (min-resolution: 192dpi),
+  screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-container {
+    background-image: linear-gradient(
+        rgba(17, 17, 17, 0),
+        rgba(17, 17, 17, 0.4)
+      ),
+      url(/img/hero_desktop@2x.jpg);
+  }
 }
 
 .hero-title {
@@ -31,6 +98,25 @@
   font-size: 20px;
   line-height: 1.2;
   margin-bottom: 32px;
+}
+@media screen and (max-width: 767px) {
+  br {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-btn-item {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 .hero-button-list {
   display: flex;
@@ -53,6 +139,12 @@
   transition: background-color var(--time-duration) var(--time-distribution),
     color var(--time-duration) var(--time-distribution),
     border var(--time-duration) var(--time-distribution);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-button {
+    padding: 14px 40px;
+  }
 }
 .hero-button.сolored {
   border: none;
@@ -83,6 +175,11 @@
   padding: 0;
   margin-top: 32px;
 }
+@media screen and (min-width: 768px) {
+  .hero-button.scroll {
+    margin-top: 0;
+  }
+}
 
 .elips-btn-hero {
   align-items: center;
@@ -97,8 +194,24 @@
     color var(--time-duration) var(--time-distribution);
 }
 
+@media screen and (min-width: 768px) {
+  .elips-btn-hero {
+    height: 38px;
+    width: 38px;
+  }
+}
+
 .icon-btn-hero {
   fill: currentColor;
+  width: 16px;
+  height: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .icon-btn-hero {
+    width: 22px;
+    height: 22px;
+  }
 }
 
 .hero-button.scroll:hover,
