--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,25 +1,26 @@
 <section class="hero-section">
   <div class="hero-container">
     <h1 class="hero-title">
-      Treat yourself or a loved one to our finest ingredients for a moment of
-      pure delight!
+      Treat yourself or a loved one to <br />
+      our finest ingredients for a moment <br />
+      of pure delight!
     </h1>
-
-    <div class="hero-button-list">
-      <button type="button" class="hero-button сolored">Buy now</button>
-
-      <button type="button" class="hero-button transparent" id="how-its-made">
-        How it’s made
-      </button>
-    </div>
-
-    <button type="button" class="hero-button scroll">
-      scroll down
-      <div class="elips-btn-hero">
-        <svg class="icon-btn-hero" width="16" height="16">
-          <use href="./img/icons.svg#icon-vector"></use>
-        </svg>
+    <div class="hero-btn-item">
+      <div class="hero-button-list">
+        <button type="button" class="hero-button сolored">Buy now</button>
+        <a href="#how-its-made" class="hero-button transparent"
+          >How it’s made</a
+        >
       </div>
-    </button>
+
+      <a href="#our-products" class="hero-button scroll">
+        scroll down
+        <div class="elips-btn-hero">
+          <svg class="icon-btn-hero">
+            <use href="/img/icons.svg#icon-vector"></use>
+          </svg>
+        </div>
+      </a>
+    </div>
   </div>
 </section>
