--- a/src/partials/unique_components.html
+++ b/src/partials/unique_components.html
@@ -1,5 +1,6 @@
 <section>
 
+    <div class="unique-components-text">
     <h2 class="title-unique-components">
         IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="taste-unique-components">TASTE</span> SENSATION
     </h2>
@@ -10,12 +11,14 @@
         finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one
         exceptional taste sensation.
     </p>
+    </div>
 
     <ul class="kinds-unique-components">
-        <li class="block-unique-components">
+        <li class="
+        ">
             <div class="main-image-unique-components">
                 <svg class="icon-unique-components">
-                    <use href="../img/milk_choco_desktop.png"></use>
+                    <use href="../img/milk_choco_tablet_mobile.png"></use>
                 </svg>
                 <p class="main-title-unique-components">MILK CHOCOLATE</p>
             </div>
@@ -39,7 +42,7 @@
         <li class="block-unique-components">
             <div class="main-image-unique-components">
                 <svg class="icon-unique-components">
-                    <use href="../img/milk_choco_desktop.png"></use>
+                    <use href="../img/milk_tablet_mobile.png"></use>
                 </svg>
                 <p class="main-title-unique-components">MILK</p>
             </div>
@@ -64,7 +67,7 @@
         <li class="block-unique-components">
             <div class="main-image-unique-components">
                 <svg class="icon-unique-components">
-                    <use href="../img/nuts_desktop.png"></use>
+                    <use href="../img/nuts_tablet_mobile.png"></use>
                 </svg>
                 <p class="main-title-unique-components">NUTS</p>
             </div>
@@ -89,7 +92,7 @@
         <li class="block-unique-components">
             <div class="main-image-unique-components">
                 <svg class="icon-unique-components">
-                    <use href="../img/s_s_choco_desktop.png"></use>
+                    <use href="../img/s_s_choco_tablet_mobile.png"></use>
                 </svg>
                 <p class="main-title-unique-components">SEMI-SWEET CHOCOLATE</p>
             </div>
