--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -1,31 +1,31 @@
-<section>
+<section id="how-its-made">
   <div class="container">
     <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how-its-made">
       <div class="main-image-made">
         <picture>
           <source
-            srcset="../img/made_desktop.jpg, ../img/made_desktop@2x.jpg 2x"
+            srcset="/img/made_desktop.jpg, /img/made_desktop@2x.jpg 2x"
             media="(min-width: 1200px)"
           />
           <source
-            srcset="../img/made_tablet.jpg, ../img/made_tablet@2x.jpg 2x"
+            srcset="/img/made_tablet.jpg, /img/made_tablet@2x.jpg 2x"
             media="(min-width: 768px)"
           />
           <source
-            srcset="../img/made_mobile.jpg, ../img/made_mobile@2x.jpg 2x"
+            srcset="/img/made_mobile.jpg, /img/made_mobile@2x.jpg 2x"
             media="(max-width: 767px)"
           />
-          <img src="../img/made_mobile.jpg" alt="how_its_made" />
+          <img src="/img/made_mobile.jpg" alt="how_its_made" />
         </picture>
         <span class="play"></span>
       </div>
       <div class="text-made">
         <h2 class="subtitle">
-          Try our chocolates today and discover the perfect balance of flavor
+          Try our chocolates today and <br> discover the perfect balance of flavor
         </h2>
         <ul class="list-made">
-          <li class="item">
+          <li class="item desktop-none">
             <span class="custom-inside"></span>
             Heat the milk in a saucepan without bringing it to a boil. Add sugar
             and cocoa powder.
