--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -16,7 +16,7 @@
             srcset="/img/made_mobile.jpg, /img/made_mobile@2x.jpg 2x"
             media="(max-width: 767px)"
           />
-          <img src="/img/made_mobile.jpg" alt="how_its_made" />
+          <img class="image" src="/img/made_mobile.jpg" alt="how_its_made" />
         </picture>
         <span class="play"></span>
       </div>
