--- a/src/partials/how_its_made.html
+++ b/src/partials/how_its_made.html
@@ -1,6 +1,6 @@
 <section id="how-its-made">
   <div class="container">
-    <h2 class="title">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
+    <h2 class="title-made">HOW IT'S <span class="title-slogan">MADE ?</span></h2>
     <div class="how-its-made">
       <div class="main-image-made">
         <picture>
