--- a/src/css/how_its_made.css
+++ b/src/css/how_its_made.css
@@ -86,10 +86,10 @@
 
 @media screen and (min-width: 1200px) {
   .subtitle:after {
-    content: "";
+    content: '';
     width: 256px;
     height: 0;
-    border: 1.5px solid #D9D9D9;
+    border: 1.5px solid #d9d9d9;
     transform: rotate(90deg);
     position: absolute;
     top: 127px;
@@ -99,7 +99,7 @@
 
 .list-made .item {
   line-height: 1.29;
-  letter-spacing: -0.0em;
+  letter-spacing: -0em;
   padding-left: 16px;
   margin-bottom: 18px;
 }
